; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config_parse.c_parse_variable.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config_parse.c_parse_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i32 }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i8**, i8**)* @parse_variable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_variable(%struct.TYPE_6__* %0, i8** %1, i8** %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  store i8* null, i8** %7, align 8
  store i8* null, i8** %8, align 8
  store i8* null, i8** %9, align 8
  store i8* null, i8** %10, align 8
  %15 = load i8**, i8*** %5, align 8
  store i8* null, i8** %15, align 8
  %16 = load i8**, i8*** %6, align 8
  store i8* null, i8** %16, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = call i32 @git_parse_advance_ws(%struct.TYPE_7__* %18)
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i8* @git__strndup(i32 %23, i32 %27)
  store i8* %28, i8** %8, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @GIT_ERROR_CHECK_ALLOC(i8* %29)
  %31 = load i8*, i8** %8, align 8
  %32 = call i32 @strip_comments(i8* %31, i32 0)
  store i32 %32, i32* %11, align 4
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = call i32 @parse_name(i8** %9, i8** %7, %struct.TYPE_6__* %33, i8* %34)
  store i32 %35, i32* %12, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %3
  br label %80

38:                                               ; preds = %3
  %39 = load i8*, i8** %7, align 8
  %40 = icmp ne i8* %39, null
  br i1 %40, label %41, label %75

41:                                               ; preds = %38
  br label %42

42:                                               ; preds = %48, %41
  %43 = load i8*, i8** %7, align 8
  %44 = getelementptr inbounds i8, i8* %43, i64 0
  %45 = load i8, i8* %44, align 1
  %46 = call i64 @git__isspace(i8 signext %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %42
  %49 = load i8*, i8** %7, align 8
  %50 = getelementptr inbounds i8, i8* %49, i32 1
  store i8* %50, i8** %7, align 8
  br label %42

51:                                               ; preds = %42
  %52 = load i8*, i8** %7, align 8
  %53 = call i32 @unescape_line(i8** %10, i32* %13, i8* %52, i32 0)
  store i32 %53, i32* %12, align 4
  %54 = icmp slt i32 %53, 0
  br i1 %54, label %55, label %56

55:                                               ; preds = %51
  br label %80

56:                                               ; preds = %51
  %57 = load i32, i32* %13, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %74

59:                                               ; preds = %56
  %60 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %60, i32* %14, align 4
  %61 = load i8*, i8** %10, align 8
  %62 = call i32 @git_buf_attach(i32* %14, i8* %61, i32 0)
  store i8* null, i8** %10, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = load i32, i32* %11, align 4
  %65 = call i64 @parse_multiline_variable(%struct.TYPE_6__* %63, i32* %14, i32 %64)
  %66 = icmp slt i64 %65, 0
  br i1 %66, label %70, label %67

67:                                               ; preds = %59
  %68 = call i64 @git_buf_oom(i32* %14)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %72

70:                                               ; preds = %67, %59
  store i32 -1, i32* %12, align 4
  %71 = call i32 @git_buf_dispose(i32* %14)
  br label %80

72:                                               ; preds = %67
  %73 = call i8* @git_buf_detach(i32* %14)
  store i8* %73, i8** %10, align 8
  br label %74

74:                                               ; preds = %72, %56
  br label %75

75:                                               ; preds = %74, %38
  %76 = load i8*, i8** %9, align 8
  %77 = load i8**, i8*** %5, align 8
  store i8* %76, i8** %77, align 8
  %78 = load i8*, i8** %10, align 8
  %79 = load i8**, i8*** %6, align 8
  store i8* %78, i8** %79, align 8
  store i8* null, i8** %9, align 8
  store i8* null, i8** %10, align 8
  br label %80

80:                                               ; preds = %75, %70, %55, %37
  %81 = load i8*, i8** %9, align 8
  %82 = call i32 @git__free(i8* %81)
  %83 = load i8*, i8** %10, align 8
  %84 = call i32 @git__free(i8* %83)
  %85 = load i8*, i8** %8, align 8
  %86 = call i32 @git__free(i8* %85)
  %87 = load i32, i32* %12, align 4
  ret i32 %87
}

declare dso_local i32 @git_parse_advance_ws(%struct.TYPE_7__*) #1

declare dso_local i8* @git__strndup(i32, i32) #1

declare dso_local i32 @GIT_ERROR_CHECK_ALLOC(i8*) #1

declare dso_local i32 @strip_comments(i8*, i32) #1

declare dso_local i32 @parse_name(i8**, i8**, %struct.TYPE_6__*, i8*) #1

declare dso_local i64 @git__isspace(i8 signext) #1

declare dso_local i32 @unescape_line(i8**, i32*, i8*, i32) #1

declare dso_local i32 @git_buf_attach(i32*, i8*, i32) #1

declare dso_local i64 @parse_multiline_variable(%struct.TYPE_6__*, i32*, i32) #1

declare dso_local i64 @git_buf_oom(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1

declare dso_local i8* @git_buf_detach(i32*) #1

declare dso_local i32 @git__free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
